inference/overall-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: inference
spec:
  replicas: 6
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      containers:
        - name: client-container
          image: rjacdevops/mb_overall_client:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "0.25Gi"
              cpu: "0.15"
            limits:
              memory: "4Gi"
              cpu: "3"
---
apiVersion: v1
kind: Service
metadata:
  name: client-endpoint
  namespace: inference
spec:
  selector:
    app: client-pod
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
