inference/triton-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triton-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: triton-pod
  template:
    metadata:
      labels:
        app: triton-pod
    spec:
      containers:
        - name: triton-container
          image: nvcr.io/nvidia/tritonserver:22.10-py3
          args: ['tritonserver', '--model-repository=s3://nlp-medical-biller-group-datasets-mlo4/models']
          ports:
            - containerPort: 8000
              name: http-triton
            - containerPort: 8001
              name: grpc-triton
            - containerPort: 8002
              name: metrics-triton
          resources:
            requests:
              memory: "3Gi"
              cpu: "2"
            limits:
              memory: "5Gi"
              cpu: "4"
---
apiVersion: v1
kind: Service
metadata:
  name: triton-endpoint
spec:
  selector:
    app: triton-pod
  ports:
    - port: 8000
      name: http-triton
    - port: 8001
      name: grpc-triton
    - port: 8002
      name: metrics-triton
