inference/ingress-app-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/classification"
        backend:
          service:
            name: classification-endpoint
            port:
              number: 8081
